fixes alignment

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -4,7 +4,8 @@
   max-width: 100%;
   background: #000;
   @include mobile{
-    height: 90vh;
+    height: 100vh;
+    position: relative;
   }
 .contact{
     height: 100%;
@@ -42,8 +43,10 @@
             @include mobile{
               
               margin-top: -20px;
+              margin-right: -20px;
             }
           }
+          
           .item img {
             display: block; /* Ensures no extra space below the image */
             @include mobile{
@@ -72,6 +75,7 @@
 
         @include mobile{
             margin-top: -70px;
+            margin-bottom: 60px;
             padding: 50px;
             width: 100%;
           }
